k8s-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lighthouse
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lighthouse
  name: lhci-server
spec:
  selector:
    matchLabels:
      name: lhci-server
  strategy:
    type: Recreate
  template:
    metadata:
      name: lhci-pod
      labels:
        name: lhci-server
    spec:
      containers:
        - name: lhci-server
          image: lighthouse
          volumeMounts:
            - mountPath: '/data'
              name: lhci-data-volume
          ports:
            - name: lhci-http
              containerPort: 9001
      volumes:
        - name: lhci-data-volume
          persistentVolumeClaim:
            claimName: lhci-data-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: lighthouse
  name: lhci-server
spec:
  selector:
    app: lhci-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lh1
  namespace: lighthouse
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lhci-server
            port:
              number: 80
